in-class/Lesson4/Ingress - 7/chinese-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chinese-service
spec:
  selector:
    app: chinese
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30002
  type: NodePort
