in-class/Lesson4/Ingress - 7/italian-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: italian-service
spec:
  selector:
    app: italian
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
  type: NodePort
